[project]
name = "pdfstitcher"
version = "0.8.4"
description = "The open source PDF stitching software for sewists, by sewists."
readme = "README.md"
requires-python = ">=3.8, <3.11"
license = {file = "LICENSE"}
keywords = ["pdf", "sewing", "utility", "stitch", "n-up", "page imposition"]
authors = [
    {name = "Charlotte Curtis"},
    {email = "c.f.curtis@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent"
]
dependencies = [
    "pikepdf >= 2.2.0",
    "wxPython >= 4.1",
    "Babel",
    "PyYAML",
    "appdirs",
    "requests",
    "pdf-mangler >= 0.1.4",
    "psutil",
    "pyobjc ; platform_system=='Darwin'"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "black"
]

[project.urls]
homepage = "https://www.pdfstitcher.org/"
repository = "https://github.com/cfcurtis/pdfstitcher"

[project.scripts]
pdfstitcher = "pdfstitcher.app:main"

[build-system]
requires = ["setuptools", "Babel"]
# use legacy to force setup.py to run
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pdfstitcher", "pdfstitcher.ui"]

[tool.black]
line-length = 100