[metadata]
name = pdfstitcher
# version = attr: pdfstitcher.__init__.__version__
# attr not working on my windows venv, defined in setup.py
author = Charlotte Curtis
author_email = c.f.curtis@gmail.com
description = The open source PDF stitching software for sewists, by sewists.
long_description = file: README.md
long_description_content_type = text/markdown
license = MPL-2.0
license_file = LICENSE
url = https://www.pdfstitcher.org/
project_urls =
    Bug Tracker = https://github.com/cfcurtis/pdfstitcher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = pdfstitcher
packages = find:
python_requires = >=3.6, <= 3.9.10
install_requires =
    pikepdf >= 2.2.0
    wxPython >= 4.1
    Babel
setup_requires =
    pikepdf >= 2.2.0
    wxPython >= 4.1
    Babel

[options.packages.find]
where = pdfstitcher

[options.extras_require]
test =
    PyYAML

[options.entry_points]
console_scripts =
   pdfstitcher = pdfstitcher:main