[metadata]
name = pdfstitcher
version = 0.6.2
author = Charlotte Curtis
author_email = c.f.curtis@gmail.com
description = The open source PDF stitching software for sewists, by sewists.
long_description = file: README.md
long_description_content_type = text/markdown
license = MPL-2.0
license_file = LICENSE
url = https://www.pdfstitcher.org/
project_urls =
    Bug Tracker = https://github.com/cfcurtis/pdfstitcher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6, < 3.10
install_requires =
    pikepdf >= 2.2.0
    wxPython >= 4.1
    Babel
    PyYAML
    appdirs
    pyobjc ; platform_system=="Darwin"
setup_requires =
    pikepdf >= 2.2.0
    wxPython >= 4.1
    Babel
    PyYAML
    appdirs
    pyobjc ; platform_system=="Darwin"

# Pybabel stuff
[compile_catalog]
directory = pdfstitcher/locale
domain = pdfstitcher

[options.entry_points]
console_scripts =
   pdfstitcher = pdfstitcher.pdfstitcher:main